Update Docker-multi.Dockerfile